--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,12 @@ h2 {
   padding-bottom: 5px;
 }
 
+h4 {
+  font-size: 0.7em;
+  margin-bottom: -4%;
+  color: #7b736e;
+}
+
 ul.menu-list {
   list-style: none;
   padding: 0;
