--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,11 @@ h4 {
   color: #7b736e;
 }
 
+.mainLogo{
+  width: 100%;
+  height: 100%;
+}
+
 ul.menu-list {
   list-style: none;
   padding: 0;
